--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,41 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+    <script defer>
+      window.botpress.on("webchat:ready", (conversationId) => {
+        botpress.open();
+      });
+      window.botpress.init({
+        "botId": "65fe3a80-73d9-4a3b-814d-8602d9f7368f",
+        "configuration": {
+          "botName": "Larry Personal Assistant",
+          "botDescription": "Letting you know about him",
+          "website": {},
+          "email": {},
+          "phone": {},
+          "termsOfService": {},
+          "privacyPolicy": {},
+          "color": "#3B82F6",
+          "variant": "solid",
+          "themeMode": "light",
+          "fontFamily": "inter",
+          "radius": 1
+        },
+        "clientId": "874614f1-4c26-4bb9-b1ec-ca66e114fcd4",
+        "override": {
+          "webchat": {
+            "container": ".botpress-container"
+          }
+        }
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="botpress-webchat" className="botpress-container"></div>
   </body>
 </html>
